force-app/main/default/objects/CCR__c/fields/Payee_Role__c.field-meta.xml
<CustomField>
    <fullName>Payee_Role__c</fullName>
    <label>Payee Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>