force-app/main/default/objects/CCR__c/fields/Pipeline_Status_Virgin_or_Non_Virgin__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Status_Virgin_or_Non_Virgin__c</fullName>
    <label>Pipeline Status:Virgin/Non-Virgin &amp; why?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>