force-app/main/default/objects/CCR__c/fields/POC_Incentive__c.field-meta.xml
<CustomField>
    <fullName>POC_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POC Incentive</label>
    <type>Checkbox</type>
</CustomField>