force-app/main/default/objects/CCR__c/fields/Proposed_OTE__c.field-meta.xml
<CustomField>
    <fullName>Proposed_OTE__c</fullName>
    <label>Proposed OTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>