force-app/main/default/objects/CCR__c/fields/Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Start_Date__c</fullName>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>