force-app/main/default/objects/CCR__c/fields/Re_submitted__c.field-meta.xml
<CustomField>
    <fullName>Re_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-submitted?</label>
    <type>Checkbox</type>
</CustomField>