force-app/main/default/objects/CCR__c/fields/Reason_for_late_payment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_late_payment__c</fullName>
    <label>Reason for late payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost Invoice</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>