force-app/main/default/objects/CCR__c/fields/Referral_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Amount__c</fullName>
    <label>Referral Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>