force-app/main/default/objects/CCR__c/fields/Referral_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fee_Percent__c</fullName>
    <inlineHelpText>Only used for Marketplace referral fees. If a set amount of fee has been identified, please leave this field blank.</inlineHelpText>
    <label>Referral Fee %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>