force-app/main/default/objects/CCR__c/fields/Related_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Amount__c</fullName>
    <formula>IF(NOT(ISBLANK( Opportunity_Amount_Override__c)),Opportunity_Amount_Override__c,Opportunity__r.Amount)</formula>
    <label>Related Opportunity Amount (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>