force-app/main/default/objects/CCR__c/fields/Related_Opportunity_Amount_ACV__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Amount_ACV__c</fullName>
    <description>https://rubrik.atlassian.net/browse/PRIT25-412</description>
    <formula>IF(NOT(ISBLANK( Opportunity_Amount_Override__c)),Opportunity_Amount_Override__c, Opportunity__r.ACV_Amount__c )</formula>
    <label>Related Opportunity Amount (ACV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>