force-app/main/default/objects/CCR__c/fields/Restocking_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee_Amount__c</fullName>
    <label>Restocking Fee Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>