force-app/main/default/objects/CCR__c/fields/Return_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Amount_Type__c</fullName>
    <label>Return Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
                <default>true</default>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>