force-app/main/default/objects/CCR__c/fields/Return_Completed__c.field-meta.xml
<CustomField>
    <fullName>Return_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Completed</label>
    <type>Checkbox</type>
</CustomField>