force-app/main/default/objects/CCR__c/fields/Return_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Return_Reasons__c</fullName>
    <label>Debook Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>