force-app/main/default/objects/CCR__c/fields/Second_Level_Manager__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Manager__c</fullName>
    <description>This field get autopopulated using Apprval Action once record is submitted to Manager for approval.</description>
    <label>Second Level Manager</label>
    <type>Email</type>
</CustomField>