force-app/main/default/objects/CCR__c/fields/SecondLevelManager__c.field-meta.xml
<CustomField>
    <fullName>SecondLevelManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manager of Submitter&apos;s Manager</description>
    <label>SecondLevelManager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CCRs3</relationshipName>
    <type>Lookup</type>
</CustomField>