force-app/main/default/objects/CCR__c/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <formula>IF( ISPICKVAL(Justifications__c,&apos;Cohesity Specific Situation&apos;), IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;servlet/servlet.FileDownload?file=0151W000002aKdi&quot;, &quot;red&quot;, 100, 750),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warning</label>
    <type>Text</type>
</CustomField>