force-app/main/default/objects/CCR__c/fields/Which_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Which_Accounts__c</fullName>
    <label>Which Accounts?</label>
    <type>TextArea</type>
</CustomField>