force-app/main/default/objects/CCR__c/recordTypes/CCR_Locked.recordType-meta.xml
<RecordType>
    <fullName>CCR_Locked</fullName>
    <active>true</active>
    <description>To control the write access once CCR record is locked</description>
    <label>CCR Locked</label>
</RecordType>