force-app/main/default/objects/CCR__c/recordTypes/EMEA_Claim_Form.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Claim_Form</fullName>
    <active>false</active>
    <label>EMEA Claim Form</label>
</RecordType>