force-app/main/default/objects/CCR__c/recordTypes/Internal_CCR.recordType-meta.xml
<RecordType>
    <fullName>Internal_CCR</fullName>
    <active>true</active>
    <label>Internal CCR</label>
</RecordType>