force-app/main/default/objects/CCR__c/recordTypes/Partner_Claim_Form.recordType-meta.xml
<RecordType>
    <fullName>Partner_Claim_Form</fullName>
    <active>true</active>
    <label>Partner Claim Form</label>
</RecordType>