force-app/main/default/objects/CCR__c/recordTypes/Sales_CCR.recordType-meta.xml
<RecordType>
    <fullName>Sales_CCR</fullName>
    <active>true</active>
    <description>For sales compensation exceptions</description>
    <label>Sales CCR</label>
</RecordType>