force-app/main/default/objects/CCR__c/validationRules/CCR_Type_Concession_Request_Returns.validationRule-meta.xml
<ValidationRule>
    <fullName>CCR_Type_Concession_Request_Returns</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(CCR_Type__c ,&apos;Concession Request - Returns&apos;), 
 OR(ISBLANK(Opportunity__c), ISBLANK(Asset__c), ISBLANK(Account_Name__c),ISBLANK(  Return_Reasons__c)))</errorConditionFormula>
    <errorMessage>Account, Opportunity, Asset # &amp; Debook Reason fields are required for CCR type &quot;Concession Request - Returns&quot;</errorMessage>
</ValidationRule>