force-app/main/default/objects/CCR__c/validationRules/CCR_Validation_for_Pipeline_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>CCR_Validation_for_Pipeline_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(), 
ISPICKVAL( CCR_Type__c,&apos;Virgin / Non-Virgin Territory &amp; Quota&apos;), 
ISBLANK(  Pipeline_Status_Virgin_or_Non_Virgin__c  ),
TODAY()  &gt;  DATE(2017,03,23)  
)</errorConditionFormula>
    <errorDisplayField>Pipeline_Status_Virgin_or_Non_Virgin__c</errorDisplayField>
    <errorMessage>Please enter this field when Type is &quot;Virgin / Non-Virgin Territory &amp; Quota&quot;</errorMessage>
</ValidationRule>