force-app/main/default/objects/CCR__c/validationRules/Check_based_on_Justification_Cohesity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_based_on_Justification_Cohesity</fullName>
    <active>true</active>
    <description>Describe Sales Campaign field is required when Justification is Cohesity</description>
    <errorConditionFormula>ISPICKVAL( Justifications__c ,&apos;Cohesity Specific Situation&apos;) &amp;&amp; ISBLANK(Describe_Sales_Campaign__c)</errorConditionFormula>
    <errorDisplayField>Describe_Sales_Campaign__c</errorDisplayField>
    <errorMessage>Describe Sales Campaign field is required when Justification is Cohesity</errorMessage>
</ValidationRule>