force-app/main/default/objects/CCR__c/listViews/BY_view.listView-meta.xml
<ListView>
    <fullName>BY_view</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>User__c</columns>
    <columns>CCR_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>BY view</label>
</ListView>