force-app/main/default/objects/CCR__c/listViews/CCR_EMEA_APAC_GVP_Approval_CCR.listView-meta.xml
<ListView>
    <fullName>CCR_EMEA_APAC_GVP_Approval_CCR</fullName>
    <filterScope>Queue</filterScope>
    <label>CCR EMEA/APAC GVP Approval</label>
    <queue>CCR_EMEA_APAC_GVP_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>