force-app/main/default/objects/CCR__c/listViews/CCR_Sales_Ops_Approval_CCR.listView-meta.xml
<ListView>
    <fullName>CCR_Sales_Ops_Approval_CCR</fullName>
    <filterScope>Queue</filterScope>
    <label>CCR Sales Ops Approval</label>
    <queue>CCR_Sales_Ops_Approval</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>