force-app/main/default/objects/CCR__c/listViews/Channel_SPIFF_NEW.listView-meta.xml
<ListView>
    <fullName>Channel_SPIFF_NEW</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Incentive__c</columns>
    <columns>Deal_Registration_Number__c</columns>
    <columns>Deal_Initiated_Type__c</columns>
    <columns>Customer_Company__c</columns>
    <columns>Partner_Company_Name__c</columns>
    <columns>Partner_Rep_Name__c</columns>
    <columns>User__c</columns>
    <columns>Meeting_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CCR_Type__c</field>
        <operation>equals</operation>
        <value>Channel SPIFF,Marketing SPIFF</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Pending,Submitted</value>
    </filters>
    <label>Channel SPIFF - NEW</label>
</ListView>