force-app/main/default/objects/CCR__c/listViews/Finance_Dir_CCR_Pending.listView-meta.xml
<ListView>
    <fullName>Finance_Dir_CCR_Pending</fullName>
    <columns>NAME</columns>
    <columns>Affective_Person__c</columns>
    <columns>Affected_Person_Manual__c</columns>
    <columns>CCR_Type__c</columns>
    <columns>User__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Current_Approver_Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Approver_Email__c</field>
        <operation>equals</operation>
        <value>phyllis.liu@rubrik.com</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Head of Finance CCR Pending</label>
    <sharedTo>
        <group>Sales_Management</group>
    </sharedTo>
</ListView>