force-app/main/default/objects/CCR__c/listViews/FinanceQueue_CCR.listView-meta.xml
<ListView>
    <fullName>FinanceQueue_CCR</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance Queue</label>
    <queue>FinanceQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>