force-app/main/default/objects/CCR__c/listViews/FY26_Q2_Cloud_PG_Contest.listView-meta.xml
<ListView>
    <fullName>FY26_Q2_Cloud_PG_Contest</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>CCR_Type__c</columns>
    <columns>Incentive__c</columns>
    <columns>Deal_Initiated_Type__c</columns>
    <columns>Partner_Company_Name__c</columns>
    <columns>Customer_Company__c</columns>
    <columns>Country__c</columns>
    <columns>CDM1__c</columns>
    <columns>StateCode__c</columns>
    <columns>Deal_Registration_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incentive__c</field>
        <operation>equals</operation>
        <value>FY26 Q2 Cloud PG Contest Incentive</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>equals</operation>
        <value>Pending,Submitted</value>
    </filters>
    <label>FY26 Q2 Cloud PG Contest</label>
</ListView>